change day-3 project content

--- a/03-rotating-nav/index.html
+++ b/03-rotating-nav/index.html
@@ -22,17 +22,17 @@
         </div>
 
         <div class="content">
-            <h1>Amazing Article</h1>
-            <small>Florin Pop</small>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate fugit eligendi unde tempore deserunt
-                optio ipsam. Cum sapiente quas omnis quod. Dolores dignissimos eum temporibus placeat ipsum tempore
-                aperiam aspernatur.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate fugit eligendi unde tempore deserunt
-                optio ipsam. Cum sapiente quas omnis quod. Dolores dignissimos eum temporibus placeat ipsum tempore
-                aperiam aspernatur.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate fugit eligendi unde tempore deserunt
-                optio ipsam. Cum sapiente quas omnis quod. Dolores dignissimos eum temporibus placeat ipsum tempore
-                aperiam aspernatur.
+            <h1>Dreepy</h1>
+            <small>Dzaky Badawi</small>
+            <p>Dreepy is a small, green Pokémon resembling a reptile or amphibian. It has yellow eyes, pink horns, and a
+                light green tail with two hand-like protrusions at the front of its body, while its head is a darker
+                green. Its tail also possesses a darker green area with three protrusions surrounding it.
+                Dreepy are reborn ghosts of a prehistoric species that once lived in ancient seas. It tends to wander
+                the locations where it once lived after it is reborn. Dreepy are exceptionally weak in combat, so much
+                that on its own, a mere child could defeat it. However, it has the potential to become much stronger and
+                evolve if it has friends to help it train.
+                Dreepy can often be seen fighting alongside its evolutionary relatives Drakloak and Dragapult. The
+                latter even launches Dreepy at Mach speeds, which the Dreepy enjoy.
             </p>
             <h3>My Dreepy</h3>
             <img src="https://s1.zerochan.net/Dreepy.600.2778930.jpg" alt="dreepy image">
